# abun.ch

./: .gitignore  CNAME  README.md  index.html  notes.md  script.js  styles.css
backend/: Cargo.toml  sqlx-data.json
backend/migrations/: 20221110193041_setup_bunch.sql  20221110193130_setup_entry.sql  20221110194050_setup_creator.sql  20230411210559_setup_tokens.sql  20230427072434_bunch_redirect.sql
backend/src/: api.rs  bunch_url.rs  cors.rs  db.rs  error.rs  identifier.rs  main.rs  model.rs
bunch/: index.html  styles.css
frontend/: package-lock.json  package.json
frontend/src/: index.html  script.js  styles.css
frontend/src/bunch/: index.html  script.js
frontend/src/components/: Card.astro
frontend/src/layouts/: Layout.astro
frontend/src/pages/: [bunchURI].astro  index.astro
frontend/src_old/: info.html  script.js  styles.css
