[package]
name = "abunch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.2", features = ["tls", "secrets", "json"]}
nanoid = "0.4.0"
rocket_db_pools = {version = "0.1.0-rc.2", features = ["sqlx_postgres"]}
sqlx = { version = "0.5", features = [ "postgres", "macros"] }
thiserror = "1.0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = "0.3.17"
pwhash = "1"